--- a/src/views/pages/log.ejs
+++ b/src/views/pages/log.ejs
@@ -4,10 +4,18 @@
       <%- include('../partials/head') -%>  
     </head>
     <body> 
-      <%- include('../partials/main') -%>  
+      <%- include('../partials/main') -%> 
+
       <%- include('../partials/login') -%>   
-      <%- include('../partials/login-error') -%>  
+      <%- include('../partials/login-error') -%> 
+
+      <%- include('../partials/signup') -%>  
+      <%- include('../partials/signup-error') -%>  
+
       <%- include('../partials/logout') -%> 
+
+      <%- include('../partials/routing-error') -%>  
+      
       <%- include('../partials/footer') -%>  
       </body>
 </html>
