--- a/src/views/partials/chat.ejs
+++ b/src/views/partials/chat.ejs
@@ -38,7 +38,7 @@
               <input class="form-control" type="text" id="text" name ="text" required>
               </div>
               <div class="mb-3">
-                <button type="submit"  class="btn btn-primary mb-3"> Enviar </button>
+                <button type="submit"  class="btn btn-secondary btn-sm"> Enviar </button>
               </div>
             </form>
     <div scope="row" id="text_set"></div> 
