--- a/src/views/partials/main.ejs
+++ b/src/views/partials/main.ejs
@@ -1,15 +1,13 @@
 <% if (main) { %>
 <form action="/login">
     <div class="form-group">
-        <input class="btn btn-primary mb-3" type="submit" value="Login">
+        <input class="btn btn-secondary btn-sm" type="submit" value="Login">
     </div>
 </form>
-
-OR
-
+<br>
 <form action="/signup">
     <div class="form-group">
-        <input class="btn btn-primary mb-3" type="submit" value="Sign Up">
+        <input class="btn btn-secondary btn-sm" type="submit" value="Sign Up">
     </div>
 </form>
 
