--- a/src/views/partials/signup-error.ejs
+++ b/src/views/partials/signup-error.ejs
@@ -1,8 +1,7 @@
-<% if (loginError) { %>
-
-<div class="container text-center my-3">
+<% if (signupLogout) { %>
+    <div class="container text-center my-3">
     <div class="jumbotron" style="background-color: salmon;color: white;">
-        <h1>Credenciales no válidas</h1>
+        <h1>Usuario ya registrado</h1>
 
         <button class="btn btn-warning my-5" onclick="back()">VOLVER</button>
     </div>
@@ -18,3 +17,4 @@
     }
 </script>
 <% } %>
+
